classDiagram
    direction TB

namespace UI {
    class Main {
        main(args)
    }
    class CommandManager {
        commands : List~Command~
        undoStack : Deque~Command~
        run()
        initCommands()
        afficherMenu()
        executerCommande()
    }
    class Command {
        <<interface>>
        execute()
        getLabel()
        undo()
    }
    class AddGameCommand {
        gameAdded : BoardGame
        execute()
        getLabel()
        undo()
    }
    class DeleteCommand {
        deletedGame : BoardGame
        execute()
        getLabel()
        undo()
    }
    class ListGamesCommand {
        execute()
        getLabel()
    }
    class RecommandGameCommand {
        execute()
        getLabel()
    }
    class GameForXPlayersCommand {
        execute()
        getLabel()
    }
    class SummaryCommand {
        execute()
        getLabel()
    }
    class UndoCommand {
        undoStack : Deque~Command~
        execute()
        getLabel()
    }
    class TournamentCommand {
        execute()
        getLabel()
    }
}

namespace BUSINESS {
    class GameService {
        addGame(game)
        removeGame(title)
        getAllGames()
        getGamesForPlayers(n)
        recommendGame(n)
        getRandomGames(count)
    }
    class TournamentFormat {
        <<interface>>
        play(players, sc)
    }
    class ChampionshipFormat {
        play(players, sc)
    }
    class KingOfTheHillFormat {
        play(players, sc)
    }
    class Player {
        name
        points
        wins
        addVictory()
        addDefeat()
    }
}

namespace DATA {
    class GameCollection {
        games : List~BoardGame~
        addGame(game)
        removeGame(title)
        getGames()
    }
    class BoardGame {
        <<record>>
        title : String
        minPlayers : int
        maxPlayers : int
        category : String
    }
}

namespace STORAGE {
    class StorageStrategy {
        <<interface>>
        save(file, games)
        load(file)
    }
    class JsonStorage {
        save(file, games)
        load(file)
    }
    class CsvStorage {
        save(file, games)
        load(file)
    }
}

Command <|.. AddGameCommand
Command <|.. DeleteCommand
Command <|.. ListGamesCommand
Command <|.. RecommandGameCommand
Command <|.. GameForXPlayersCommand
Command <|.. SummaryCommand
Command <|.. UndoCommand
Command <|.. TournamentCommand

TournamentFormat <|.. ChampionshipFormat
TournamentFormat <|.. KingOfTheHillFormat

StorageStrategy <|.. JsonStorage
StorageStrategy <|.. CsvStorage

Main --> CommandManager
Main --> GameService
Main --> GameCollection
Main --> StorageStrategy

CommandManager --> Command
CommandManager --> GameService

AddGameCommand --> GameService
DeleteCommand --> GameService
ListGamesCommand --> GameService
RecommandGameCommand --> GameService
GameForXPlayersCommand --> GameService
SummaryCommand --> GameService
TournamentCommand --> GameService
TournamentCommand --> TournamentFormat
TournamentCommand --> Player

GameService --> GameCollection
GameCollection --> StorageStrategy
GameCollection --> BoardGame
